-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.4.0, Lustre 2.1.4, Lustre 2.1.5
-
3
-
6634
In reviewing the new REINT_RMENTRY is added, it appears that the MDS code is LASSERTing on data from the network. This appears (to me at least) unintentional, since it is appears trying to return an err_serious() to the caller, but is passing "opc" as the argument instead of "-EFAULT". The err_serious() code will fail LASSERT(rc < 0), even though later code like mdt_reint_unpack() returns -EFAULT.